openapi response body
