# shared/openapi/openapi.yaml
@@ -141,6 +141,16 @@ components:
         code: { type: string }
         name: { type: string }
 
+    Shortname:
+      description: 'A shortname with its identifier'
+      type: object
+      required:
+        - id
+        - shortname
+      properties:
+        id: { type: integer, readOnly: true }
+        shortname: { type: string }
+
     Shortname_listing:
       description: 'Shortnames with its corresponding statistic name'
       type: object
@@ -363,7 +373,10 @@ paths:
                 - shortname
       responses:
         '201':
-          description: The shortname was created
+          description: The shortname that was created
+          content:
+            application/json:
+              schema: { $ref: '#/components/schemas/Shortname' }
   /statistics:
     get:
       summary: List of all statistics
